--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tpg-rtmap-website",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:10000",
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
